Aggiunta delle tabelle Lesson e StudentLesson, creazione della cartella Teacher che contiene le pagine di base per gestire gli incontri.

--- a/Pages/Default.cshtml
+++ b/Pages/Default.cshtml
@@ -15,9 +15,8 @@
 <body>
     <div class="text-center">
         <h1 class="display-4">Welcome</h1>
-        <h4 class="text-center"><a asp-area="Identity" asp-page="/Account/Register">Register</a> - <a asp-area="Identity" asp-page="/Account/Login">Login</a></h4>
     </div>
-
+    <a class="nav-link text-dark" asp-area="" asp-page="/Teacher/Index">Lessons</a>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
