--- a/Pages/Subjects/Index.cshtml
+++ b/Pages/Subjects/Index.cshtml
@@ -2,10 +2,10 @@
 @model EsperiaHelp.Pages.Subjects.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Subjects";
 }
 
-<h1>Index</h1>
+<h1>Subjects</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
