Creazione inizializzazione dei dati del DB; aggiornamento pagine per la gestione degli incontri da parte degli insegnanti; piccola modifica alle classi Lesson, ApplicationUser, Classroom e Class per problemi con le FK.

--- a/Pages/Teacher/Delete.cshtml
+++ b/Pages/Teacher/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Lesson.N_participants)
         </dd>
+        <dt class="col-sm-2">
+            Classroom
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Classroom.Name)
+        </dd>
     </dl>
     
     <form method="post">
