--- a/Pages/Student/Delete.cshtml
+++ b/Pages/Student/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
-@model EsperiaHelp.Pages.Teacher.DeleteModel
+@model EsperiaHelp.Pages.Student.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Registration</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure to sign up for this lesson?</h3>
 <div>
     <h4>Lesson</h4>
     <hr />
@@ -37,16 +37,22 @@
             @Html.DisplayFor(model => model.Lesson.N_participants)
         </dd>
         <dt class="col-sm-2">
-            Classroom
+            @Html.DisplayNameFor(model => model.Lesson.ApplicationUser)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Classroom.Name)
+            @Html.DisplayFor(model => model.Lesson.ApplicationUser.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Lesson.Classroom)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Lesson.Classroom.Name)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Lesson.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Registration" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
