FE Edit and Create page (Teacher).

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Student/Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">I tuoi corsi</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Student/Index">I tuoi corsi</a>
                             </li>
                         }
                         else if (User.IsInRole("Teacher"))
