--- a/Pages/Teacher/Edit.cshtml
+++ b/Pages/Teacher/Edit.cshtml
@@ -2,43 +2,52 @@
 @model EsperiaHelp.Pages.Teacher.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Modifca";
 }
 
-<h1>Edit</h1>
+<h1 class="text-danger">Modifica corso</h1>
+<p>Tutti i partecipanti verranno informati delle modifiche</p>
 
-<h4>Lesson</h4>
+<h4>Matematica</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Lesson.Id" />
+
             <div class="form-group">
-                <label asp-for="Lesson.Date" class="control-label"></label>
-                <input asp-for="Lesson.Date" class="form-control" />
-                <span asp-validation-for="Lesson.Date" class="text-danger"></span>
+                <label class="control-label">Data</label>
+                <input class="form-control" />
+                <span class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Lesson.StartTime" class="control-label"></label>
-                <input type="time" asp-for="Lesson.StartTime" class="form-control" />
-                <span asp-validation-for="Lesson.StartTime" class="text-danger"></span>
+                <label class="control-label">Inizio corso</label>
+                <input type="time" class="form-control" />
+                <span class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Lesson.EndTime" class="control-label"></label>
-                <input type="time" asp-for="Lesson.EndTime" class="form-control" />
-                <span asp-validation-for="Lesson.EndTime" class="text-danger"></span>
+                <label class="control-label">Fine corso</label>
+                <input type="time" class="form-control" />
+                <span class="text-danger"></span>
             </div>
-            
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label class="control-label">Aula</label>
+                <input class="form-control" />
+                <span class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <a class="btn btn-success"><i class="fas fa-check" style="color: white;"></i></a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Torna ai tuoi corsi</a>
 </div>
 
 @section Scripts {
