--- a/Pages/Classrooms/Delete.cshtml
+++ b/Pages/Classrooms/Delete.cshtml
@@ -2,27 +2,24 @@
 @model EsperiaHelp.Pages.Classrooms.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Cancellazione";
 }
 
-<h1>Delete</h1>
+<h1 class="text-danger">Vuoi davvero rimuovere questa aula?</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Classroom</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Classroom.Name)
+            Aula
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Classroom.Name)
+            
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Classroom.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a class="btn btn-danger"><i class="fa fa-remove" style="color: white;"></i></a> |
+        <a asp-page="./Index">Torna alla lista delle aule</a>
     </form>
 </div>
