--- a/Pages/Materie/Index.cshtml
+++ b/Pages/Materie/Index.cshtml
@@ -2,35 +2,63 @@
 @model EsperiaHelp.Pages.Subjects.IndexModel
 
 @{
-    ViewData["Title"] = "Subjects";
+    ViewData["Title"] = "Materie";
 }
 
-<h1>Subjects</h1>
+<h1 class="text-danger">Lista delle materie</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Subject[0].Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+<div class="table-responsive">
+    <table class="table table-hover text-center">
+        <thead class="bg-danger text-white">
+            <tr>
+                <th>
+                    Materie
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <!--<tbody>
+    @foreach (var item in Model.Subject) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>-->
     <tbody>
-@foreach (var item in Model.Subject) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                Matematica
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" class="btn btn-warning"><i class="fa fa-pencil-square-o" style="color: white;"></i></a> |
+                <a asp-page="./Delete" class="btn btn-danger"><i class="fa fa-remove" style="color: white;"></i></a>
             </td>
         </tr>
-}
+        <tr>
+            <td>
+                Informatica
+            </td>
+            <td>
+                <a asp-page="./Edit" class="btn btn-warning"><i class="fa fa-pencil-square-o" style="color: white;"></i></a> |
+                <a asp-page="./Delete" class="btn btn-danger"><i class="fa fa-remove" style="color: white;"></i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Inglese
+            </td>
+            <td>
+                <a asp-page="./Edit" class="btn btn-warning"><i class="fa fa-pencil-square-o" style="color: white;"></i></a> |
+                <a asp-page="./Delete" class="btn btn-danger"><i class="fa fa-remove" style="color: white;"></i></a>
+            </td>
+        </tr>
     </tbody>
-</table>
+    </table>
+</div>
