--- a/Pages/Materie/Index.cshtml
+++ b/Pages/Materie/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="text-danger">Lista delle materie</h1>
 
-<div class="table-responsive">
+<div class="table-responsive mt-5">
     <table class="table table-hover text-center">
         <thead class="bg-danger text-white">
             <tr>
@@ -61,4 +61,8 @@
         </tr>
     </tbody>
     </table>
+</div>
+
+<div class="text-center mt-5">
+    <p><a asp-page="./Create">Aggiungi una nuova materia</a></p>
 </div>
