--- a/Pages/Aule/Index.cshtml
+++ b/Pages/Aule/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="text-danger">Lista delle aule</h1>
 
-<div class="table-responsive">
+<div class="table-responsive mt-5">
     <table class="table table-hover text-center">
         <thead class="bg-danger text-white">
             <tr>
