--- a/Pages/Aule/Index.cshtml
+++ b/Pages/Aule/Index.cshtml
@@ -53,3 +53,7 @@
     </tbody>
     </table>
 </div>
+
+<div class="text-center mt-5">
+    <p><a asp-page="./Create">Aggiungi una nuova aula</a></p>
+</div>
