--- a/Pages/Aule/Edit.cshtml
+++ b/Pages/Aule/Edit.cshtml
@@ -2,12 +2,11 @@
 @model EsperiaHelp.Pages.Classrooms.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Modifica";
 }
 
-<h1>Edit</h1>
+<h1 class="text-danger">Modifica aula</h1>
 
-<h4>Classroom</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,19 +14,19 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Classroom.Id" />
             <div class="form-group">
-                <label asp-for="Classroom.Name" class="control-label"></label>
+                <label asp-for="Classroom.Name" class="control-label">Aula</label>
                 <input asp-for="Classroom.Name" class="form-control" />
                 <span asp-validation-for="Classroom.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-success"><i class="fas fa-check" style="color: white;"></i></a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Torna alla lista delle aule</a>
 </div>
 
 @section Scripts {
