--- a/Pages/Classi/Index.cshtml
+++ b/Pages/Classi/Index.cshtml
@@ -2,35 +2,37 @@
 @model EsperiaHelp.Pages.Classes.IndexModel
 
 @{
-    ViewData["Title"] = "Classes";
+    ViewData["Title"] = "Classi";
 }
 
-<h1>Classes</h1>
+<h1 class="text-danger">Lista delle classi</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Class[0].Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Class) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="table-responsive mt-5">
+    <table class="table table-hover text-center">
+        <thead class="bg-danger text-white">
+            <tr>
+                <th>
+                    Classe
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model.Class) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="fa fa-pencil-square-o" style="color: white;"></i></a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa fa-remove" style="color: white;"></i></a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
+
+<div class="text-center mt-5">
+    <p><a asp-page="./Create">Aggiungi una nuova classe</a></p>
+</div>
